--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,7 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+# python
+__pycache__
+
 # End of https://www.gitignore.io/api/java,gradle,intellij
